--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -27,61 +27,64 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="?attr/actionBarSize"
             android:orientation="horizontal">
+
+            <FrameLayout
+                android:id="@+id/detail_fragment_container"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true">
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/recipe_detail_container"
+                        android:layout_margin="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="4dp"
+                        app:contentPaddingBottom="16dp"
+                        tools:layout="@layout/fragment_recipe_details" />
+                </ScrollView>
+
+                <ImageView
+                    android:id="@+id/temp_button"
+                    android:layout_width="@dimen/touchpad_size"
+                    android:layout_height="@dimen/touchpad_size"
+                    android:layout_gravity="end|right"
+                    android:padding="@dimen/button_margin_small"
+                    android:src="@drawable/ic_menu_close_clear_cancel"/>
+
+            </FrameLayout>
+
+
+
+            <android.support.v4.widget.Space
+                android:id="@+id/align"
+                android:layout_alignStart="@id/detail_fragment_container"
+                android:layout_alignLeft="@id/detail_fragment_container"
+                android:layout_width="0dp"
+                android:layout_height="0dp" />
 
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/fragment"
                 android:name="project.hnoct.kitchen.ui.FragmentRecipeList"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_alignEnd="@id/align"
+                android:layout_alignRight="@id/align"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 tools:layout="@layout/fragment_main" />
-
-            <RelativeLayout
-                android:id="@+id/detail_fragment_container"
-                android:layout_width="600dp"
-                android:layout_height="match_parent"
-                tools:layout="@layout/fragment_recipe_details">
-
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <android.support.v7.widget.CardView
-                            android:id="@+id/recipe_detail_container"
-                            android:layout_margin="16dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:cardCornerRadius="4dp"
-                            app:contentPaddingBottom="16dp"
-                            tools:layout="@layout/fragment_recipe_details"/>
-                    </LinearLayout>
-
-                </ScrollView>
-
-                <ImageView
-                    android:id="@+id/temp_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:padding="16dp"
-                    android:src="@drawable/ic_menu_close_clear_cancel"/>
-
-            </RelativeLayout>
-
-        </LinearLayout>
+        </RelativeLayout>
 
         <android.support.v7.widget.GridLayout
             android:layout_width="wrap_content"
