--- a/app/src/main/res/layout/list_item_recipe.xml
+++ b/app/src/main/res/layout/list_item_recipe.xml
@@ -14,14 +14,15 @@
         android:id="@+id/list_recipe_content_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minHeight="240dp"
         >
 
         <RelativeLayout
             android:id="@+id/list_recipe_image_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-            <ImageView
+            <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
                 android:id="@+id/list_recipe_image"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/card_thumbnail_height_single"
@@ -78,7 +79,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <TextView
