--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -38,20 +38,26 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true">
+                android:layout_alignParentRight="true"
+                tools:layout_width="600dp">
 
                 <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/recipe_detail_container"
-                        android:layout_margin="16dp"
+                    <FrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:cardCornerRadius="4dp"
-                        app:contentPaddingBottom="16dp"
-                        tools:layout="@layout/fragment_recipe_details" />
+                        android:layout_height="wrap_content">
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/recipe_detail_container"
+                            android:layout_margin="16dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:cardCornerRadius="4dp"
+                            app:contentPaddingBottom="16dp"
+                            tools:layout="@layout/fragment_recipe_details" />
+                    </FrameLayout>
+
                 </ScrollView>
 
                 <ImageView
@@ -60,6 +66,9 @@
                     android:layout_height="@dimen/touchpad_size"
                     android:layout_gravity="end|right"
                     android:padding="@dimen/button_margin_small"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginEnd="16dp"
                     android:src="@drawable/ic_menu_close_clear_cancel"/>
 
             </FrameLayout>
