Improve performance of shared element transitions
Previously, getSupportPostponeEnterTransition was never called due to
incorrect query of the database to see if the recipe had been previously
loaded. Fixed the error and set the fragment to load the image from
source if it exists.

A background was also added to the layout of
R.layout.fragment_recipe_details on details_recipe_content1 & 2 so the
slide animation would have a background instead of just text.

Also fixed error where FragmentRecipeDetails would not load details of
an imported recipe due to the CursorLoader pointing to an incorrect URI.

--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -35,7 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:transitionGroup="true">
+                android:transitionGroup="true"
+                android:background="@color/background_light">
 
                 <TextView
                     android:id="@+id/details_recipe_title_text"
@@ -141,7 +142,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:transitionGroup="true">
+                android:transitionGroup="true"
+                android:background="@color/background_light">
 
                 <TextView
                     android:id="@+id/details_direction_title_text"
