Update importing of recipes from Epicurious
Now imports nutrition and serving information. Also inserts/updates
recipe depending on whether it already exists in database.

--- a/app/src/main/res/layout/fragment_create_recipe.xml
+++ b/app/src/main/res/layout/fragment_create_recipe.xml
@@ -47,6 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_text_vertical_padding"
                 android:inputType="textAutoCorrect|textCapWords|textMultiLine"
+                android:imeOptions="actionNext"
                 android:maxLines="2"
                 android:hint="@string/create_recipe_name_hint"
                 />
