--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,14 +8,6 @@
     tools:context="project.hnoct.kitchen.ui.FragmentRecipeList"
     tools:showIn="@layout/activity_main">
 
-    <!--<WebView-->
-        <!--android:id="@+id/recipe_webview"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:visibility="invisible">-->
-
-    <!--</WebView>-->
-
     <android.support.v7.widget.CardView
         android:id="@+id/recipe_search_more"
         android:layout_width="match_parent"
@@ -28,6 +20,7 @@
         android:visibility="gone"
         app:cardCornerRadius="@dimen/card_corner_radius"
         app:contentPadding="@dimen/card_horizontal_margin">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Not finding what you're looking for? \nImport more recipes online!"/>
+                android:text="@string/search_online_text"/>
 
             <ImageView
                 android:layout_width="@dimen/touchpad_size"
@@ -47,6 +40,17 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
+    <TextView
+        android:id="@+id/recipe_error_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
+    <ProgressBar
+        android:id="@+id/recipe_progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recipe_recycler_view"
