Add error-handling when failing to import recipes
Now displays a ProgressBar while syncing so users are informed of
activity. If recipes fail to import, then an error message is displayed
indicating the cause of the error.

The variable for last sync is now only updated on successful import of
recipes instead of when sync is initiated.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -40,12 +40,6 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-    <TextView
-        android:id="@+id/recipe_error_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
-
     <ProgressBar
         android:id="@+id/recipe_progressbar"
         android:layout_width="wrap_content"
@@ -57,5 +51,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/recipe_error_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/card_horizontal_margin"
+        android:layout_marginLeft="@dimen/card_horizontal_margin"
+        android:layout_marginStart="@dimen/card_horizontal_margin"
+        android:layout_marginRight="@dimen/card_horizontal_margin"
+        android:layout_marginEnd="@dimen/card_horizontal_margin"
+        android:visibility="gone"
+        app:cardCornerRadius="@dimen/card_corner_radius"
+        app:contentPadding="@dimen/card_horizontal_margin">
+
+        <TextView
+            android:id="@+id/recipe_error_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/error_empty"
+            android:layout_centerHorizontal="true"/>
+
+    </android.support.v7.widget.CardView>
+
 
 </RelativeLayout>
