Alter ActivityRecipeDetails layout
Now using CollapsingToolbarLayout that includes the recipe image. The
image view uses parallax scrolling to hide the image view as the
NestedScrollView holding the Fragment is scrolled up. The toolbar itself
will change from transparent to colored as the user scrolls down to
remain visible.

Also added Snackbar to inform the user of lack of network connectivity
when there are already recipes in the database in ActivityRecipeList.

Added Snackbar to inform user of lack of network connectivity when
attempting to view recipe details that have not been imported yet.

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -28,12 +28,16 @@
     </style>
 
     <style name="AppTheme.Details" parent="AppTheme">
+        <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowEnterTransition">@transition/details_window_enter_transition</item>
-        <item name="android:windowExitTransition">@transition/details_window_return_transition</item>
-        <item name="android:windowSharedElementsUseOverlay">false</item>
+        <item name="android:windowReturnTransition">@transition/details_window_return_transition</item>
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@color/transparent_white</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 
     <style name="AppTheme.Favorites" parent="AppTheme">
