--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,14 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:descendantFocusability="beforeDescendants"
+        android:transitionGroup="false"
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:transitionGroup="true"
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar
@@ -34,6 +37,7 @@
                     android:paddingRight="@dimen/activity_vertical_margin"
                     android:paddingEnd="@dimen/activity_vertical_margin"
                     >
+
                     <TextView
                         android:id="@+id/app_title"
                         android:layout_width="wrap_content"
@@ -71,8 +75,6 @@
                         android:visibility="gone"/>
 
                 </RelativeLayout>
-
-
 
             </android.support.v7.widget.Toolbar>
 
