--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -9,42 +9,63 @@
 
     <android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/detail_coordinatorlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         tools:context="project.hnoct.kitchen.ui.ActivityRecipeDetails">
 
-        <FrameLayout
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/details_nested_scrollview"
+            android:clipToPadding="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/opaque_white"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:transitionGroup="true">
+
+            <include layout="@layout/content_recipe_details" />
+
+        </android.support.v4.widget.NestedScrollView>
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
-            android:elevation="4dp">
+            android:background="@android:color/transparent"
+            android:transitionGroup="false"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/transparent_white"
-                android:elevation="4dp"
-                app:elevation="1dp"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                android:layout_height="wrap_content"
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-        </FrameLayout>
+                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
+                    android:id="@+id/details_recipe_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="fitXY"
+                    android:transitionName="@string/transition_recipe_image"
+                    app:layout_collapseMode="parallax"
+                    tools:src="@drawable/placeholder" />
 
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:fitsSystemWindows="false"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"/>
 
+            </android.support.design.widget.CollapsingToolbarLayout>
 
-        <!-- <android.support.design.widget.AppBarLayout
-            android:id="@+id/toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            android:background="#00000000">
-
-        </android.support.design.widget.AppBarLayout> -->
-
-        <include layout="@layout/content_recipe_details" />
+        </android.support.design.widget.AppBarLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
