--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -1,187 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/content_recipe_details"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:focusableInTouchMode="true">
+    android:orientation="vertical"
+    android:focusableInTouchMode="true"
+    tools:showIn="@layout/activity_recipe_details">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:focusableInTouchMode="true">
+        android:orientation="vertical">
 
-        <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
-            android:id="@+id/details_recipe_image"
-            android:layout_height="wrap_content"
+        <FrameLayout
+            android:id="@+id/details_recipe_content1"
             android:layout_width="match_parent"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"
-            android:transitionName="@string/transition_recipe_image"
-            tools:src="@drawable/placeholder" />
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <FrameLayout
-                android:id="@+id/details_recipe_content1"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:transitionGroup="true"
-                android:background="@color/opaque_white">
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/details_recipe_title_text"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/default_text_vertical_padding"
+                    style="@style/titleText"
+                    tools:text="Kentucky Fried Chicken" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingRight="@dimen/activity_horizontal_margin"
-                    android:orientation="vertical" >
+                    android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/details_recipe_title_text"
+                        android:id="@+id/details_recipe_author_text"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
-                        android:layout_marginTop="@dimen/default_text_vertical_padding"
-                        app:layout_columnSpan="3"
-                        style="@style/titleText"
-                        tools:text="Kentucky Fried Chicken" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/details_recipe_author_text"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            tools:text="Recipe by hnocturna" />
-
-                        <TextView
-                            android:id="@+id/details_recipe_attribution_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            tools:text="Allrecipes"
-                            />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/details_ratings_text"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            tools:text="4.9\u2605" />
-
-                        <TextView
-                            android:id="@+id/details_recipe_reviews_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="end|center_vertical"
-                            tools:text="9001 reviews"
-                            />
-
-                    </LinearLayout>
-
-                    <View
-                        android:id="@+id/details_line_separator_top"
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/details_line_separator_padding"
-                        android:layout_marginRight="@dimen/details_line_separator_padding"
-                        android:background="@color/grey_300"
-                        tools:visibility="visible" />
+                        android:layout_weight="1"
+                        tools:text="Recipe by hnocturna" />
 
                     <TextView
-                        android:id="@+id/details_recipe_short_description_text"
-                        android:layout_width="match_parent"
+                        android:id="@+id/details_recipe_attribution_text"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/details_description_text_padding"
-                        style="@style/descriptionText"
-                        tools:text="An easy, creamy chicken enchilada casserole. Slow cooking gently melds together the flavors of the chicken thigh meat, cream of chicken soup, sour cream, and green chiles"
+                        android:layout_gravity="end"
+                        tools:text="Allrecipes"
                         />
-
-                    <View
-                        android:id="@+id/details_line_separator_bottom"
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/details_line_separator_padding"
-                        android:layout_marginRight="@dimen/details_line_separator_padding"
-                        android:background="@color/grey_300"
-                        tools:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/details_ingredient_title_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/list_ingredient_title"
-                        android:gravity="center_horizontal"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
-                        style="@style/subtitleText"
-                        tools:visibility="visible" />
-
-                    <project.hnoct.kitchen.view.NonScrollingRecyclerView
-                        android:id="@+id/details_ingredient_recycler_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/default_text_vertical_padding"/>
 
                 </LinearLayout>
 
-                <ProgressBar
-                    android:id="@+id/details_recipe_progressbar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-            </FrameLayout>
+                    <TextView
+                        android:id="@+id/details_ratings_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        tools:text="4.9\u2605" />
 
-            <LinearLayout
-                android:id="@+id/details_recipe_content2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:transitionGroup="true"
-                android:background="@color/opaque_white">
+                    <TextView
+                        android:id="@+id/details_recipe_reviews_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="end|center_vertical"
+                        tools:text="9001 reviews"
+                        />
+
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/details_line_separator_top"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:layout_marginLeft="@dimen/details_line_separator_padding"
+                    android:layout_marginRight="@dimen/details_line_separator_padding"
+                    android:background="@color/grey_300"
+                    tools:visibility="visible" />
 
                 <TextView
-                    android:id="@+id/details_direction_title_text"
+                    android:id="@+id/details_recipe_short_description_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/list_direction_title"
+                    android:layout_marginTop="@dimen/details_description_text_padding"
+                    style="@style/descriptionText"
+                    tools:text="An easy, creamy chicken enchilada casserole. Slow cooking gently melds together the flavors of the chicken thigh meat, cream of chicken soup, sour cream, and green chiles"
+                    />
+
+                <View
+                    android:id="@+id/details_line_separator_bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:layout_marginLeft="@dimen/details_line_separator_padding"
+                    android:layout_marginRight="@dimen/details_line_separator_padding"
+                    android:background="@color/grey_300"
+                    tools:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/details_ingredient_title_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/list_ingredient_title"
                     android:gravity="center_horizontal"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
                     style="@style/subtitleText"
                     tools:visibility="visible" />
 
                 <project.hnoct.kitchen.view.NonScrollingRecyclerView
-                    android:id="@+id/details_direction_recycler_view"
+                    android:id="@+id/details_ingredient_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
-                    android:layout_marginTop="@dimen/default_text_vertical_padding" />
+                    android:layout_marginTop="@dimen/default_text_vertical_padding"/>
+
             </LinearLayout>
 
+            <ProgressBar
+                android:id="@+id/details_recipe_progressbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
 
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/details_recipe_content2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin">
+
+            <TextView
+                android:id="@+id/details_direction_title_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/list_direction_title"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                style="@style/subtitleText"
+                tools:visibility="visible" />
+
+            <project.hnoct.kitchen.view.NonScrollingRecyclerView
+                android:id="@+id/details_direction_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/default_text_vertical_padding" />
         </LinearLayout>
+
 
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
+
 
 
     <!--<android.support.v7.widget.RecyclerView-->
