Implement NavigationDrawer on all main Activities for UI consistency
Altered the layout of:
 - Favorites
 - My Recipes
 - Recipe Books
to include the NavigationDrawer from ActivityRecipeList so that
navigation within the app is consistent and easy. Back button will
always take the user back to ActivityRecipeList from these auxiliary
Activities. The current Activity is always highlighted in the navigation
menu to indicate to the user. Clicking on the current Activity will do
nothing.

Also added scrolling behavior to the toolbar of these auxiliary
Activities.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,8 +142,6 @@
                 app:layout_gravity="center_horizontal"
                 app:srcCompat="@drawable/ic_menu_add_custom" />
 
-
-
         </android.support.v7.widget.GridLayout>
 
     </android.support.design.widget.CoordinatorLayout>
@@ -154,6 +152,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/opaque_white"
+        app:itemBackground="@drawable/menu_background_color"
+        app:itemTextColor="@color/menu_text_color"
         app:menu="@menu/menu_main">
 
     </android.support.design.widget.NavigationView>
