--- a/app/src/main/res/menu/menu_recipe_book.xml
+++ b/app/src/main/res/menu/menu_recipe_book.xml
@@ -7,4 +7,46 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_browse"
+        android:orderInCategory="1"
+        android:title="@string/browse_title"
+        android:checked="false"
+        android:checkable="true" />
+
+    <item
+        android:id="@+id/action_favorites"
+        android:orderInCategory="2"
+        android:title="@string/favorite_title"
+        android:checked="false"
+        android:checkable="true" />
+
+    <item
+        android:id="@+id/action_my_recipes"
+        android:orderInCategory="3"
+        android:title="@string/my_recipes_title"
+        android:checked="false"
+        android:checkable="true" />
+
+    <item
+        android:id="@+id/action_my_recipe_books"
+        android:orderInCategory="4"
+        android:title="@string/recipe_book_title"
+        android:checked="true"
+        android:checkable="true" />
+
+    <item
+        android:id="@+id/action_copy_db"
+        android:orderInCategory="5"
+        android:title="@string/transfer_db_title"
+        android:checked="false"
+        android:checkable="true" />
+
+    <item
+        android:id="@+id/action_clear_data"
+        android:title="@string/action_clear_data"
+        android:orderInCategory="99"
+        android:checked="false"
+        android:checkable="true" />
 </menu>
