Add shopping list Dialog for adding ingredients to shopping list
Allow the user to add items to an internal shopping list (to be made) by
displaying a new ShoppingListDialog that includes all ingredients for a
given recipe. A CheckBox is included to allow the user to selectively
add ingredients to the shopping list.

Added method Utilities#removePreparation that will attempt to strip
preparation verbiage from the ingredient to display a cleaner shopping
list.

Increase the ingredient key line dimension to 72dp to better allow for
awkward quantities such as 1 (10.5 oz) can.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,7 +26,7 @@
     <dimen name="card_compact_vertical_separation">4dp</dimen>
 
     <!-- Ingredient list item -->
-    <dimen name="list_ingredient_keyline">64dp</dimen>
+    <dimen name="list_ingredient_keyline">72dp</dimen>
     <dimen name="list_ingredient_min_height">24dp</dimen>
 
     <!-- Direction list item -->
@@ -61,5 +61,6 @@
     <dimen name="list_add_direction_keyline">80dp</dimen>
     <dimen name="list_add_direction_button_top_margin">12dp</dimen>
 
-
+    <!-- Shopping List Dialog -->
+    <dimen name="dialog_recyclerview_height">400dp</dimen>
 </resources>
