Create ActivityShoppingList for displaying shopping list
Copied the layout and function of ActivityFavorites. Added the new
Activity as a menu option in the NavigationDrawer of all relevant
Activities. The Activity utilizes a CursorLoader filtering the
LinkIngredient table for all ingredients that should be in the shopping
list.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -37,6 +37,13 @@
         android:checkable="true" />
 
     <item
+        android:id="@+id/action_shopping_list"
+        android:orderInCategory="5"
+        android:title="@string/shopping_list_title"
+        android:checked="false"
+        android:checkable="true" />
+
+    <item
         android:id="@+id/action_copy_db"
         android:orderInCategory="5"
         android:title="@string/transfer_db_title"
