Fix bug in ActivityShoppingList regarding CheckBoxes
Due to the recipe titles being added in, mShoppingListArray was setting
the incorrect value for checked positions. This eventually led to an
ArrayOutOfIndex error.

--- a/app/src/main/res/layout/list_item_ingredient_recipe_title.xml
+++ b/app/src/main/res/layout/list_item_ingredient_recipe_title.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/shopping_list_recipe_title_separation"
     android:gravity="center_horizontal"
     android:id="@+id/list_ingredient_name"
-    style="@style/titleTextCompact">
+    style="@style/titleTextCompact"
+    tools:text="Recipe Number 1">
 
 </TextView>
