Add method for deleting checked items from ActivityShoppingList
Added a FAB that removes checked items from the shopping list. The
method sets the column for shopping list to 0 as well as the checked
value to 0 so that next time the ingredient is added to the shopping
list, it will show as unchecked.

--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -31,6 +31,14 @@
 
         <include layout="@layout/content_shopping_list" />
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/shopping_list_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_gravity="bottom|end"
+            android:src="@drawable/ic_menu_delete"/>
+
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
