--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -8,6 +8,20 @@
     tools:context="project.hnoct.kitchen.ui.FragmentShoppingList"
     tools:showIn="@layout/activity_shopping_list">
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/shopping_list_info_cardview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        app:contentPadding="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Add ingredients to the shopping list\nto see them here"/>
+    </android.support.v7.widget.CardView>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/shopping_list_recyclerView"
         android:layout_width="match_parent"
