--- a/app/src/main/res/layout/list_item_shopping_list.xml
+++ b/app/src/main/res/layout/list_item_shopping_list.xml
@@ -5,6 +5,10 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
     android:gravity="center_vertical"
     android:minHeight="@dimen/list_ingredient_min_height">
     
