Add message to inform user to create a recipe
Added a CardView containing a TextView informing the user that when they
create or modify an existing recipe it will show up in
ActivityMyRecipes.

--- a/app/src/main/res/layout/fragment_recipebook.xml
+++ b/app/src/main/res/layout/fragment_recipebook.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        app:contentPadding="@dimen/activity_horizontal_margin">
+        app:contentPadding="@dimen/activity_horizontal_margin"
+        app:cardCornerRadius="@dimen/card_corner_radius">
 
         <TextView
             android:layout_width="match_parent"
