--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -18,14 +18,23 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <TextView
+    <android.support.v7.widget.CardView
+        android:id="@+id/my_recipes_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="@dimen/activity_horizontal_margin"
-        app:layout_anchor="@id/my_recipes_recyclerview"
-        app:layout_anchorGravity="fill"
-        tools:text="Favorite a recipe to see it here!" />
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        app:cardCornerRadius="@dimen/card_corner_radius"
+        app:contentPadding="@dimen/activity_horizontal_margin"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/my_recipes_empty_card" />
+
+    </android.support.v7.widget.CardView>
+
 
     <project.hnoct.kitchen.view.SlidingAlphabeticalIndex
         android:id="@+id/my_recipes_sliding_index"
