--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
                         android:hint="@string/search_hint"
                         android:layout_alignRight="@id/right_bound"
                         android:layout_alignEnd="@id/right_bound"
-                        android:visibility="gone"/>
+                        android:visibility="invisible"/>
 
                 </RelativeLayout>
 
