Update layout and functionality of AddRecipeDialog
Previously, the dialog merely showed a list of recipes to the user,
making it difficult to select a specific recipe they had in mind.
Options for filtering by favorites, custom-recipes, and searching by
name were added to the layout to make it easier to narrow down recipes
the user would like to add to the recipe book.

--- a/app/src/main/res/layout/dialog_recyclerview.xml
+++ b/app/src/main/res/layout/dialog_recyclerview.xml
@@ -1,16 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:contentPaddingTop="@dimen/card_vertical_padding"
+    app:contentPaddingBottom="@dimen/card_vertical_padding">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/dialog_add_recipe_recyclerview"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin">
+        android:orientation="vertical">
 
-    </android.support.v7.widget.RecyclerView>
+        <LinearLayout
+            android:id="@+id/dialog_add_recipe_search_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:visibility="gone"
+            tools:visibility="visible">
+            <EditText
+                android:id="@+id/dialog_add_recipe_search"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:imeOptions="actionSearch"
+                android:inputType="textAutoCorrect"
+                android:hint="@string/search_hint"
+                />
+
+            <ImageView
+                android:id="@+id/dialog_add_recipe_search_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_menu_search"/>
+
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/dialog_add_recipe_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginBottom="@dimen/text_vertical_padding_small"/>
+
+        <LinearLayout
+            android:id="@+id/dialog_add_recipe_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:visibility="gone"
+            tools:visibility="visible">
+
+            <LinearLayout
+                android:id="@+id/dialog_add_recipe_favorites"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/dialog_add_recipe_favorites_icon"
+                    android:layout_height="28dp"
+                    android:layout_width="28dp"
+                    app:layout_columnWeight="1"
+                    android:src="@drawable/btn_rating_star_off_normal_holo_light"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Favorites"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/dialog_add_recipe_my_recipes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/dialog_add_recipe_my_recipes_icon"
+                    android:layout_height="28dp"
+                    android:layout_width="28dp"
+                    app:layout_columnWeight="1"
+                    android:src="@drawable/ic_my_recipes"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Recipes"/>
+
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 </android.support.v7.widget.CardView>
